--- a/template.ejs
+++ b/template.ejs
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>Results</h1>
+    <p>Date: <%= calculatedValues.projectDate%></p>
     <p>Air Density: <%= (calculatedValues.airDensity).toFixed(2) %></p>
     <p>LD Factor: <%= (calculatedValues.ldFactor).toFixed(2) %></p>
     <p>Pressure Factor: <%= (calculatedValues.pressureFactor).toFixed(2) %></p>
