--- a/public/style.css
+++ b/public/style.css
@@ -270,7 +270,7 @@ input[type="button"] {
   margin-bottom: 0px;
 }
 
-#calculate {
+#Calculate {
   padding: 11px 5px;
   border: none;
   border-radius: 5px;
@@ -291,4 +291,47 @@ input[type="button"] {
   display: flex;
   justify-content: center;
   gap: 20px;
+}
+
+.EndButtons input[type="button"], .Logout button {
+  margin: 10px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  background: #535bb9;
+  color: #fff;
+  transition: all 0.5s ease;
+  cursor: pointer;
+}
+
+.EndButtons input[type="button"]:hover, .Logout button:hover {
+  background: #df7320;
+  transform: scale(1.05);
+}
+
+#EndButtons input[type="button"], .Logout button, #Calculate {
+  margin: 0px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  background: #535bb9;
+  color: #fff;
+  transition: all 0.5s ease;
+  cursor: pointer;
+}
+
+#EndButtons input[type="button"]:hover, .Logout button:hover, #Calculate:hover {
+  background: #df7320;
+  transform: scale(1.05);
+}
+
+#Calculate {
+  margin-top: 2px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  background: #535bb9;
+  color: #fff;
+  transition: all 0.5s ease;
+  cursor: pointer;
 }
