--- a/template.ejs
+++ b/template.ejs
@@ -6,33 +6,203 @@
   </head>
   <body>
     <img src="anand_mincons_logo.png" alt="Logo" />
-    <p>Date: <%= calculatedValues.projectDate%></p>
-    <table>
-      <tr>
-        <th>Parameter</th>
-        <th>Input Value</th>
-        <th>Output Value</th>
-      </tr>
-      <tr>
-        <td>Air Density</td>
-        <td><!-- INPUT VALUE --></td>
-        <td><%= (calculatedValues.airDensity).toFixed(2) %></td>
-      </tr>
-      <tr>
-        <td>LD Factor</td>
-        <td><!-- INPUT VALUE --></td>
-        <td><%= (calculatedValues.ldFactor).toFixed(2) %></td>
-      </tr>
-      <tr>
-        <td>Pressure Factor</td>
-        <td><!-- INPUT VALUE --></td>
-        <td><%= (calculatedValues.pressureFactor).toFixed(2) %></td>
-      </tr>
-      <!-- Add more rows for additional properties -->
-    </table>
+    <div class="container">
+    <p class="date">Date: <%= calculatedValues.projectDate%></p>
+    
 
-    <div>
+    <div class="content-box">
+    <div class="project-details">
+      <h2>Project Parameters</h2>
+      <div class="project-parameters-container">
+        <div class="project-parameters-left">
+          <p>Company Name: <%= calculatedValues.companyName %></p>
+          <p>Project Name: <%= calculatedValues.projectName %></p>
+          <p>Tunnel Name: <%= calculatedValues.tunnelName %></p>
+          <p>Tunnel Height: <%= calculatedValues.tunnelHeight %></p>
+          <p>Tunnel Width: <%= calculatedValues.tunnelWidth %></p>
+          <p>RAV: <%= calculatedValues.rav %></p>
+        </div>
+        <div class="project-parameters-right">
+          <p>Type of Tunnel: <%= calculatedValues.tunnelType %></p>
+          <p>Tunnel Area: <%= calculatedValues.tunnelArea %></p>
+          <p>Type of Excavation: <%= calculatedValues.excavationType %></p>
+          <p>Production Days: <%= calculatedValues.productionDays %></p>
+          <p>Electric Power Price: <%= calculatedValues.electricPowerPrice %></p>
+        </div>
+      </div>
+      <hr style="border-top: 1px solid #cccc; margin: 20px 0;">
+      <h2>Other Parameters</h2>
+      <div class="project-parameters-container">
+        <div class="project-parameters-left">
+          <p>Project Number: <%= calculatedValues.companyName %></p>
+          <p>Project Date: <%= calculatedValues.companyName %></p>
+          <p>Duct Classification: <%= calculatedValues.companyName %></p>
+        </div>
+        <div class="project-parameters-right">
+          <p>Application: <%= calculatedValues.tunnelType %></p>
+          <p>Person In Charge: <%= calculatedValues.tunnelType %></p>
+          <p>Customer: <%= calculatedValues.tunnelType %></p>
+        </div>
+      </div>
+    </div>
+  </div>
+    
+
+    <div class="tables-container">
+      <div class="table-wrapper">
+        <h2>Input Parameters</h2>
+        <table>
+          <tr>
+            <th>Parameter</th>
+            <th>Value</th>
+          </tr>
+          <!-- Add your input parameters here -->
+          <tr>
+            <td class="flex-container">
+              <span>Friction Coefficient</span>
+              <td><%= calculatedValues.fricCoeffInt %></td>
+            </td>
+          </tr>
+          <tr>
+            <td class="flex-container">
+              <span>Leakage</span>
+              <td><%= calculatedValues.leakage %></td>
+            </td>
+          </tr>
+          <tr>
+            <td class="flex-container">
+              <span>Site Height</span>
+              <td><%= calculatedValues.siteHeight %></td>
+            </td>
+          </tr>
+          <tr>
+            <td class="flex-container">
+              <span>Temperature</span>
+              <td><%= calculatedValues.temperature %></td>
+            </td>
+          </tr>
+          <tr>
+            <td class="flex-container">
+              <span>Air Volume at Front</span>
+              <td><%= (calculatedValues.airVolAtFront).toFixed(2) %></td>
+            </td>
+          </tr>
+          <tr>
+            <td class="flex-container">
+              <span>Pressure at Duct End</span>
+              <td><%= calculatedValues.pressureAtDuctEnd %></td>
+            </td>
+          </tr>
+          <tr>
+            <td class="flex-container">
+              <span>Duct Length</span>
+              <td><%= calculatedValues.ductLength %></td>
+            </td>
+          </tr>
+          <tr>
+            <td class="flex-container">
+              <span>Duct Diameter</span>
+              <td><%= (calculatedValues.ductDiameter).toFixed(2) %></td>
+            </td>
+          </tr>
+          <tr>
+            <td class="flex-container">
+              <span>Ventilator Efficiency</span>
+              <td><%= (calculatedValues.ventilatorEfficiency).toFixed(2) %></td>
+            </td>
+          </tr>
+          <tr>
+            <td class="flex-container">
+              <span>Zeta Loss Factor</span>
+              <td><%= (calculatedValues.zetaLossFactor).toFixed(2) %></td>
+            </td>
+          </tr>
+          <!-- ... Additional input parameters -->
+        </table>
+      </div>
+
+      <div class="table-wrapper">
+        <h2>Output Parameters</h2>
+        <table>
+          <tr>
+            <th>Parameter</th>
+            <th>Value</th>
+          </tr>
+          <tr>
+            <td class="flex-container">
+              <span>Air Density</span>
+            </td>
+            <td><%= (calculatedValues.airDensity).toFixed(2) %></td>
+          </tr>
+          <tr>
+            <td class="flex-container">
+              <span>L/D Factor</span>
+            </td>
+            <td><%= (calculatedValues.airDensity).toFixed(2) %></td>
+          </tr>
+          <tr>
+            <td class="flex-container">
+              <span>Pressure Factor</span>
+            </td>
+            <td><%= (calculatedValues.airDensity).toFixed(2) %></td>
+          </tr>
+          <tr>
+            <td class="flex-container">
+              <span>Loss Factor</span>
+            </td>
+            <td><%= (calculatedValues.airDensity).toFixed(2) %></td>
+          </tr>
+          <tr>
+            <td class="flex-container">
+              <span>Ventilator Volume Supply</span>
+            </td>
+            <td><%= (calculatedValues.airDensity).toFixed(2) %></td>
+          </tr>
+          <tr>
+            <td class="flex-container">
+              <span>Stat. Pressure Loss</span>
+            </td>
+            <td><%= (calculatedValues.airDensity).toFixed(2) %></td>
+          </tr>
+          <tr>
+            <td class="flex-container">
+              <span>Dyn. Pressure Loss</span>
+            </td>
+            <td><%= (calculatedValues.airDensity).toFixed(2) %></td>
+          </tr>
+          <tr>
+            <td class="flex-container">
+              <span>Addit. Losses</span>
+            </td>
+            <td><%= (calculatedValues.airDensity).toFixed(2) %></td>
+          </tr>
+          <tr>
+            <td class="flex-container">
+              <span>Total Pressure Loss</span>
+            </td>
+            <td><%= (calculatedValues.airDensity).toFixed(2) %></td>
+          </tr>
+          <tr>
+            <td class="flex-container">
+              <span>Min. Inst. Capacity [kW]</span>
+            </td>
+            <td><%= (calculatedValues.airDensity).toFixed(2) %></td>
+          </tr>
+          <tr>
+            <td class="flex-container">
+              <span>Cost Of Electricity</span>
+            </td>
+            <td><%= (calculatedValues.airDensity).toFixed(2) %></td>
+          </tr>
+          <!-- ... Additional output parameters -->
+        </table>
+      </div>
+    </div>
+    <h2>Remarks</h2>
+    <div class="content-box">
+     
       <%- htmlContent %>
     </div>
+  </div>
   </body>
 </html>
