--- a/template.ejs
+++ b/template.ejs
@@ -7,7 +7,6 @@
   <body>
     <img src="anand_mincons_logo.png" alt="Logo" />
     <div class="container">
-    <p class="date">Date: <%= calculatedValues.projectDate%></p>
     
 
     <div class="content-box">
@@ -15,40 +14,40 @@
       <h2>Project Parameters</h2>
       <div class="project-parameters-container">
         <div class="project-parameters-left">
-          <p>Company Name: <%= calculatedValues.companyName %></p>
-          <p>Project Name: <%= calculatedValues.projectName %></p>
-          <p>Tunnel Name: <%= calculatedValues.tunnelName %></p>
-          <p>Tunnel Height: <%= calculatedValues.tunnelHeight %></p>
-          <p>Tunnel Width: <%= calculatedValues.tunnelWidth %></p>
-          <p>RAV: <%= calculatedValues.rav %></p>
+          <p><strong>Company Name:</strong> <%= calculatedValues.companyName %></p>
+          <p><strong>Project Name:</strong> <%= calculatedValues.projectName %></p>
+          <p><strong>Tunnel Name:</strong> <%= calculatedValues.tunnelName %></p>
+          <p><strong>Tunnel Height:</strong> <%= calculatedValues.tunnelHeight %> m</p>
+          <p><strong>Tunnel Width:</strong> <%= calculatedValues.tunnelWidth %> m</p>
+          <p><strong>RAV:</strong> <%= calculatedValues.rav %> m/s</p>
         </div>
         <div class="project-parameters-right">
-          <p>Type of Tunnel: <%= calculatedValues.tunnelType %></p>
-          <p>Tunnel Area: <%= calculatedValues.tunnelArea %></p>
-          <p>Type of Excavation: <%= calculatedValues.excavationType %></p>
-          <p>Production Days: <%= calculatedValues.productionDays %></p>
-          <p>Electric Power Price: <%= calculatedValues.electricPowerPrice %></p>
+          <p><strong>Type of Tunnel:</strong> <%= calculatedValues.tunnelType %></p>
+          <p><strong>Tunnel Area:</strong> <%= calculatedValues.tunnelArea %> sq.m</p>
+          <p><strong>Type of Excavation:</strong> <%= calculatedValues.excavationType %></p>
+          <p><strong>Production Days:</strong> <%= calculatedValues.productionDays %></p>
+          <p><strong>Electric Power Price:</strong> <%= calculatedValues.electricPowerPrice %> <%= calculatedValues.currency %>/kWh</p>
         </div>
       </div>
       <hr style="border-top: 1px solid #cccc; margin: 20px 0;">
       <h2>Other Parameters</h2>
       <div class="project-parameters-container">
         <div class="project-parameters-left">
-          <p>Project Number: <%= calculatedValues.companyName %></p>
-          <p>Project Date: <%= calculatedValues.companyName %></p>
-          <p>Duct Classification: <%= calculatedValues.companyName %></p>
+          <p><strong>Project Number:</strong> <%= calculatedValues.projectNumber %></p>
+          <p><strong>Project Date:</strong> <%= calculatedValues.projectDate %></p>
+          <p><strong>Duct Classification:</strong> <%= calculatedValues.ductClassification %></p>
         </div>
         <div class="project-parameters-right">
-          <p>Application: <%= calculatedValues.tunnelType %></p>
-          <p>Person In Charge: <%= calculatedValues.tunnelType %></p>
-          <p>Customer: <%= calculatedValues.tunnelType %></p>
+          <p><strong>Application:</strong> <%= calculatedValues.application %></p>
+          <p><strong>Person In Charge:</strong> <%= calculatedValues.personIncharge %></p>
+          <p><strong>Customer:</strong> <%= calculatedValues.customer %></p>
         </div>
       </div>
     </div>
   </div>
     
 
-    <div class="tables-container">
+  <div class="tables-container print-page-break">
       <div class="table-wrapper">
         <h2>Input Parameters</h2>
         <table>
@@ -59,61 +58,60 @@
           <!-- Add your input parameters here -->
           <tr>
             <td class="flex-container">
-              <span>Friction Coefficient</span>
+              <span><strong>Friction Coefficient (λ)</strong></span>
               <td><%= calculatedValues.fricCoeffInt %></td>
             </td>
           </tr>
           <tr>
             <td class="flex-container">
-              <span>Leakage</span>
+              <span><strong>Leakage (ғғ)</strong></span>
               <td><%= calculatedValues.leakage %></td>
             </td>
           </tr>
           <tr>
             <td class="flex-container">
-              <span>Site Height</span>
+              <span><strong>Site Height (m)</strong></span>
               <td><%= calculatedValues.siteHeight %></td>
             </td>
           </tr>
           <tr>
             <td class="flex-container">
-              <span>Temperature</span>
+              <span><strong>Temperature (°C)</strong></span>
               <td><%= calculatedValues.temperature %></td>
             </td>
           </tr>
           <tr>
             <td class="flex-container">
-              <span>Air Volume at Front</span>
+              <span><strong>Air Volume at Front (cu. m/s)</strong></span>
               <td><%= (calculatedValues.airVolAtFront).toFixed(2) %></td>
             </td>
           </tr>
           <tr>
             <td class="flex-container">
-              <span>Pressure at Duct End</span>
+              <span><strong>Pressure at Duct End (Pa)</strong></span>
               <td><%= calculatedValues.pressureAtDuctEnd %></td>
             </td>
           </tr>
           <tr>
             <td class="flex-container">
-              <span>Duct Length</span>
+              <span><strong>Duct Length (m)</strong></span>
               <td><%= calculatedValues.ductLength %></td>
             </td>
           </tr>
           <tr>
             <td class="flex-container">
-              <span>Duct Diameter</span>
+              <span><strong>Duct Diameter (m)</strong></span>
               <td><%= (calculatedValues.ductDiameter).toFixed(2) %></td>
             </td>
-          </tr>
           <tr>
             <td class="flex-container">
-              <span>Ventilator Efficiency</span>
+              <span><strong>Ventilator Efficiency</strong></span>
               <td><%= (calculatedValues.ventilatorEfficiency).toFixed(2) %></td>
             </td>
           </tr>
           <tr>
             <td class="flex-container">
-              <span>Zeta Loss Factor</span>
+              <span><strong>Zeta Loss Factor</strong></span>
               <td><%= (calculatedValues.zetaLossFactor).toFixed(2) %></td>
             </td>
           </tr>
@@ -130,69 +128,69 @@
           </tr>
           <tr>
             <td class="flex-container">
-              <span>Air Density</span>
+              <span><strong>Air Density</strong></span>
             </td>
             <td><%= (calculatedValues.airDensity).toFixed(2) %></td>
           </tr>
           <tr>
             <td class="flex-container">
-              <span>L/D Factor</span>
+              <span><strong>L/D Factor</strong></span>
             </td>
-            <td><%= (calculatedValues.airDensity).toFixed(2) %></td>
+            <td><%= (calculatedValues.ldFactor).toFixed(2) %></td>
           </tr>
           <tr>
             <td class="flex-container">
-              <span>Pressure Factor</span>
+              <span><strong>Pressure Factor (π1)</strong></span>
             </td>
-            <td><%= (calculatedValues.airDensity).toFixed(2) %></td>
+            <td><%= (calculatedValues.pressureFactor).toFixed(2) %></td>
           </tr>
           <tr>
             <td class="flex-container">
-              <span>Loss Factor</span>
+              <span><strong>Loss Factor (Qf/Qo)</strong></span>
             </td>
-            <td><%= (calculatedValues.airDensity).toFixed(2) %></td>
+            <td><%= (calculatedValues.lossFactor).toFixed(2) %></td>
           </tr>
           <tr>
             <td class="flex-container">
-              <span>Ventilator Volume Supply</span>
+              <span><strong>Ventilator Volume Supply (cu. m/s)</strong></span>
             </td>
-            <td><%= (calculatedValues.airDensity).toFixed(2) %></td>
+            <td><%= (calculatedValues.ventilatorVolumeSupply).toFixed(2) %></td>
           </tr>
           <tr>
             <td class="flex-container">
-              <span>Stat. Pressure Loss</span>
+              <span><strong>Stat. Pressure Loss (Pa)</strong></span>
             </td>
-            <td><%= (calculatedValues.airDensity).toFixed(2) %></td>
+            <td><%= (calculatedValues.statPressureLoss).toFixed(2) %></td>
           </tr>
           <tr>
             <td class="flex-container">
-              <span>Dyn. Pressure Loss</span>
+              <span><strong>Dyn. Pressure Loss (Pa)</strong></span>
             </td>
-            <td><%= (calculatedValues.airDensity).toFixed(2) %></td>
+            <td><%= (calculatedValues.dynPressureLoss).toFixed(2) %></td>
           </tr>
           <tr>
             <td class="flex-container">
-              <span>Addit. Losses</span>
+              <span><strong>Addit. Losses (Pa)</strong></span>
             </td>
-            <td><%= (calculatedValues.airDensity).toFixed(2) %></td>
+            <td><%= (calculatedValues.additLosses).toFixed(2) %></td>
           </tr>
           <tr>
             <td class="flex-container">
-              <span>Total Pressure Loss</span>
+              <span><strong>Total Pressure Loss (Pa)</strong></span>
             </td>
-            <td><%= (calculatedValues.airDensity).toFixed(2) %></td>
+            <td><%= (calculatedValues.totalPressureLoss).toFixed(2) %></td>
           </tr>
           <tr>
             <td class="flex-container">
-              <span>Min. Inst. Capacity [kW]</span>
+              <span><strong>Min. Inst. Capacity (KW)</strong></span>
             </td>
-            <td><%= (calculatedValues.airDensity).toFixed(2) %></td>
+            <td><%= (calculatedValues.kw).toFixed(2) %></td>
           </tr>
           <tr>
             <td class="flex-container">
-              <span>Cost Of Electricity</span>
+              <span><strong>Electricity Cost</strong></span>
             </td>
-            <td><%= (calculatedValues.airDensity).toFixed(2) %></td>
+            <td><%= calculatedValues.costOfElectricty %></td>
           </tr>
           <!-- ... Additional output parameters -->
         </table>
@@ -202,6 +200,7 @@
     <div class="content-box">
      
       <%- htmlContent %>
+    </div>
     </div>
   </div>
   </body>
